massive gpaPageLoad() function

--- a/paris.html
+++ b/paris.html
@@ -63,7 +63,7 @@
 	    </div>
 	    <div class="row-fluid uniform graph">
 				<h3 class="info">Old GPA</h3>
-				<svg id="fillgauge1"></svg>
+				<svg id="fillgauge1" width="97%" height="250"></svg>
 			</div>
 	  </div><!-- end of row-fluid -->
 
