--- a/inbox/inbox.html
+++ b/inbox/inbox.html
@@ -4,140 +4,30 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>GPA_Inbox</title>
-    <link rel="stylesheet" type="text/css" hre="../css/main_lib/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css"> 
-    <script src="../js/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css"> 
 
-    <link rel="stylesheet" href="jquery.mobile-1.4.5.min.css">
-	<link rel="stylesheet" href="../css/main.css">
-    <script src="jquery.js"></script>
+  <link rel="stylesheet" href="../css/themes/default/jquery.mobile-1.4.5.min.css">
+  <link rel="stylesheet" href="../css/themes/theme-classic/theme-classic.css">
 
-    <!-- //body content -->
-    <link rel="stylesheet" href="../css/main.css">
-    <script src="jquery.mobile-1.4.5.min.js"></script>
-	<script>
-		$( document ).on( "pagecreate", "#demo-page", function() {
+  <!-- //body content -->
+  <script src="../js/jquery.js"></script>
+  <script src="../js/main_lib/jquery.min.js"></script>
+  <script src="../js/jquery.mobile-1.4.5.min.js"></script>
 
-			// Swipe to remove list item
-			$( document ).on( "swipeleft swiperight", "#list li", function( event ) {
-				var listitem = $( this ),
-					// These are the classnames used for the CSS transition
-					dir = event.type === "swipeleft" ? "left" : "right",
-					// Check if the browser supports the transform (3D) CSS transition
-					transition = $.support.cssTransform3d ? dir : false;
-
-					confirmAndDelete( listitem, transition );
-			});
-
-			// If it's not a touch device...
-			if ( ! $.mobile.support.touch ) {
-
-				// Remove the class that is used to hide the delete button on touch devices
-				$( "#list" ).removeClass( "touch" );
-
-				// Click delete split-button to remove list item
-				$( ".delete" ).on( "click", function() {
-					var listitem = $( this ).parent( "li" );
-
-					confirmAndDelete( listitem );
-				});
-			}
-
-			function confirmAndDelete( listitem, transition ) {
-				// Highlight the list item that will be removed
-				listitem.children( ".ui-btn" ).addClass( "ui-btn-active" );
-				// Inject topic in confirmation popup after removing any previous injected topics
-				$( "#confirm .topic" ).remove();
-				listitem.find( ".topic" ).clone().insertAfter( "#question" );
-				// Show the confirmation popup
-				$( "#confirm" ).popup( "open" );
-				// Proceed when the user confirms
-				$( "#confirm #yes" ).on( "click", function() {
-					// Remove with a transition
-					if ( transition ) {
-
-						listitem
-							// Add the class for the transition direction
-							.addClass( transition )
-							// When the transition is done...
-							.on( "webkitTransitionEnd transitionend otransitionend", function() {
-								// ...the list item will be removed
-								listitem.remove();
-								// ...the list will be refreshed and the temporary class for border styling removed
-								$( "#list" ).listview( "refresh" ).find( ".border-bottom" ).removeClass( "border-bottom" );
-							})
-							// During the transition the previous button gets bottom border
-							.prev( "li" ).children( "a" ).addClass( "border-bottom" )
-							// Remove the highlight
-							.end().end().children( ".ui-btn" ).removeClass( "ui-btn-active" );
-					}
-					// If it's not a touch device or the CSS transition isn't supported just remove the list item and refresh the list
-					else {
-						listitem.remove();
-						$( "#list" ).listview( "refresh" );
-					}
-				});
-				// Remove active state and unbind when the cancel button is clicked
-				$( "#confirm #cancel" ).on( "click", function() {
-					listitem.children( ".ui-btn" ).removeClass( "ui-btn-active" );
-					$( "#confirm #yes" ).off();
-				});
-			}
-		});
-    </script>
-	<style>
-		/* Left transition */
-		li.left {
-			-webkit-transition: -webkit-transform 250ms ease;
-			-webkit-transform: translateX(-100%);
-			-moz-transition: -moz-transform 250ms ease;
-			-moz-transform: translateX(-100%);
-			-o-transition: -o-transform 250ms ease;
-			-o-transform: translateX(-100%);
-			transition: transform 250ms ease;
-			transform: translateX(-100%);
-		}
-		/* Right transition */
-		li.right {
-			-webkit-transition: -webkit-transform 250ms ease;
-			-webkit-transform: translateX(100%);
-			-moz-transition: -moz-transform 250ms ease;
-			-moz-transform: translateX(100%);
-			-o-transition: -o-transform 250ms ease;
-			-o-transform: translateX(100%);
-			transition: transform 250ms ease;
-			transform: translateX(100%);
-		}
-		/* Border bottom for the previous button during the transition*/
-		li.left a.ui-btn,
-		li.right a.ui-btn {
-			border-top-width: 0;
-			border-left-width: 1px;
-			border-right-width: 1px;
-		}
-		li a.ui-btn.border-bottom {
-			border-bottom-width: 1px;
-		}
-		/* Hide the delete button on touch devices */
-		ul.touch li.ui-li-has-alt a.delete {
-			display: none;
-		}
-		ul.touch li.ui-li-has-alt a.ui-btn {
-			margin-right:0;
-		}
-		/* Styling for the popup */
-		#confirm p {
-			text-align: center;
-			font-size: inherit;
-			margin-bottom: .75em;
-		}
-    </style>
+  <!-- //Graphs -->
+  <script src="../js/main_lib/d3.min.js" charset="utf-8"></script>
+  <script src="../js/main_lib/nv.d3.js"></script>
+  <link href="../css/nv.d3.css" rel="stylesheet" type="text/css">
+  <script src="../js/home/localStorage_test.js"></script>
+  <link rel="stylesheet" href="../css/main.css">
+	
 </head>
 
 
 <body>
 
-<div data-role="page" id="demo-page" class="inbox" data-title="Inbox">
+<div data-role="page" data-id="#inbox"  class="inbox">
+
     <div id="header" data-role="header" data-position="fixed-top" data-theme="b">
         <div class="row header">
 
@@ -165,7 +55,7 @@
         <h3 class="newMessages">4 New Messages!</h3>
 
         <ul id="list" class="touch" data-role="listview" data-icon="false" data-split-icon="delete">
-            <li>
+            <li class="mes">
                 <a class = "oddInbox" href="#demo-mail">
                     <h3 id="font-color">Beverly Parenti</h3>
                     <p class="topic"><strong>English Teacher</strong></p>
@@ -175,7 +65,7 @@
                 <a href="#" class="delete">Delete</a>
             </li>
 
-            <li>
+            <li class="mes">
                 <a class = "evenInbox" href="#demo-mail">
                     <h3 id="font-color">Chris Redlitz</h3>
                     <p class="topic"><strong>Football Coach</strong></p>
@@ -185,7 +75,7 @@
                 <a href="#" class="delete">Delete</a>
             </li>
 
-            <li>
+            <li class="mes">
                 <a class = "oddInbox" href="#demo-mail">
                     <h3 id="font-color">Jon Gripshover</h3>
                     <p class="topic"><strong>Economics Teacher</strong></p>
@@ -195,7 +85,7 @@
                 <a href="#" class="delete">Delete</a>
             </li>
 
-            <li>
+            <li class="mes">
                 <a class = "evenInbox" href="#demo-mail">
                     <h3 id="font-color">Wes Bailey</h3>
                     <p class="topic"><strong>Tutor</strong></p>
@@ -207,27 +97,65 @@
 
           </ul>
           <div class="reply">
-            <input id="" type="text" name="textinput-a" id="textinput-a" placeholder="Message" value="">
+            <input id="replay" type="text" name="textinput-a" id="textinput-a" placeholder="Message" value="">
           </div>
 
-    <div id="confirm"  data-role="popup" data-theme="b">
+    <div id="confirm">
 
         <p id="question">Are you sure you want to delete:</p>
 
         <div class="ui-grid-a">
             <div class="ui-block-a">
-                <a id="yes" class="ui-btn ui-corner-all ui-mini ui-btn-a" data-rel="back">Yes</a>
+                <a href="#" id="yes" class="ui-btn ui-corner-all ui-mini ui-btn-a" >Yes</a>
             </div>
             <div class="ui-block-b">
-                <a id="cancel" class="ui-btn ui-corner-all ui-mini ui-btn-a" data-rel="back">Cancel</a>
+                <a href="#" id="cancel" class="ui-btn ui-corner-all ui-mini ui-btn-a">Cancel</a>
             </div>
             <div class="ui-block-c noFloat">
-                <a id="message" class="ui-btn ui-corner-all ui-mini ui-btn-a" data-rel="back">Reply</a>
+                <a href="#" id="message" class="ui-btn ui-corner-all ui-mini ui-btn-a" >Reply</a>
             </div>
         </div>
 
-    </div><!-- /popup -->
-   
+    </div>
+
+   <script language="JavaScript">
+     console.log('hey it working')
+     $('#confirm').hide();
+     $('#replay').hide();
+     $('.delete').on('click',function(event){
+        $('#confirm').show();
+        var parent = $(this).parent('li.mes.ui-li-has-alt');
+        console.log(event)
+        console.log(parent)
+
+       $('#yes').on('click',function(event){
+          $('#confirm').hide();
+          parent.remove();
+       });
+       $('#cancel').on('click',function(event){
+          $('#confirm').hide();
+       });
+       $('#message').on('click',function(event){
+          $('#confirm').hide();
+          $('#replay').show();
+       });
+       $('#replay').on('change',function(){
+          $('#replay').hide();
+       })
+ 
+      });
+     
+
+
+     // $('#cancel').on('click',funciton(){
+     //    $('#confirm').hide();
+     // });
+
+     // $('#message').on('click',funciton(){
+     //    $('#confirm').hide();
+     // });
+
+   </script>
 </div><!-- /content -->
 
 
