--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 
     <!-- Custom styles for this template -->
     <link href="css/custom/signin.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/custom/custom.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/custom/custom.css"> -->
 	</head>
 	<body>
 	<!-- header -->
 <div class = "container-fluid">
+	<div class="mobile-warning">
+		Warning! Mobile Only! You must shrink your browser and refresh for view.
+	</div>
 	<div>
 		<img id="logo1" src="image/gpawht.png">
 		<img id="logo2" src="image/gpapur.png">
