--- a/alertModule.html
+++ b/alertModule.html
@@ -20,7 +20,6 @@
   <script src="css/main_lib/nv.d3.js"></script>
   <link href="css/nv.d3.css" rel="stylesheet" type="text/css">
   <script src="js/home/localStorage_test.js"></script>
-  <!-- // <script src="js/graph.js"></script> -->
   <link rel="stylesheet" href="css/main.css">
 </head>
  <body>
@@ -28,10 +27,7 @@
 <a href="newyork.html" data-transition="flip" class="ui-icon-delete ui-corner-all ui-shadow ui-btn-inline">XXXX</a>
 	
 	<!-- content -->
-<!-- <div class="ui-loader ui-corner-all ui-body-a ui-loader-default"><span class="ui-icon-loading"></span><h1>loading</h1></div> -->
-<!-- <div class="ui-panel-dismiss"></div> -->
-<!-- <div class="ui-panel-dismiss"></div>
-<div class="ui-panel-dismiss"></div> -->
+
 <div data-dialog="true"  data-external-page="true" tabindex="0" class="ui-page ui-page-theme-b ui-dialog ui-page-active" style="height: 1700px; position:relative;top:2em;">
 	<div role="dialog" class="ui-dialog-contain ui-overlay-shadow ui-corner-all" style="overflow-x:visible;overflow-y:visible;">
 
@@ -42,10 +38,12 @@
 		</div>
 
 		<div  role="main" class="ui-content">
-		<h1>Alert</h1>
-		<p><h3>Re: Jason Jones</h3>Today, Jason received a D+ on his exam and his GPA could be in jeopardy as it pertains to his athletic eligibility!" Ms. Johnson</p> 
-			<a href="#" data-rel="back" class="ui-btn ui-shadow ui-corner-all ui-btn-a">Details</a>
-			<a href="#" data-rel="back" class="ui-btn ui-shadow ui-corner-all ui-btn-a">Save</a>
+			<h1 id="badAlert">Alert</h1>
+				<p><h3 class="white">Re: Jason Jones</h3>Today, Jason received a D+ on his exam and his GPA could be in jeopardy as it pertains to his athletic eligibility!" Ms. Johnson</p> 
+				<p>Subject: Economics</p>
+				<p><a href="paris.html">Help</a></p>
+					<a href="#" data-rel="back" class="ui-btn ui-shadow ui-corner-all ui-btn-a">Details</a>
+					<a href="#" data-rel="back" class="ui-btn ui-shadow ui-corner-all ui-btn-a">Save</a>
 		</div>
 	</div>
 </div>
